# JSON_forms

./: .gitignore  ExportInspections.py  ExportInspections_a.py  ExportInspections_e.py  ExportInspections_f.py  ExportInspections_gpap.py  LICENSE  PhotoGallery.py  PrettyPrintInspection.py  PrettyPrintInspectionCompact.py  PrettyPrintInspectionCompact2.py  README.md  TestGeopandas.py  check_unittest.py  config.py  jsonforms_html.py  pads.py  pyproject.toml  readme.md  requirements.txt  simple_test.py  test_export_inspections_gpap.py  vegetation_clearing.py  work_areas.py
scratch/: save_imageblobs.py
tests/: test_export_inspections.py
tests/test_data/: readme.md  test_export_inspections_gpap.py
