[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Smash_tools"
version = "0.1.0"
description = "Provides a set of tools for designing JSON forms and for reviewing data that was collected using JSON forms"
requires-python = ">=3.8"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1"
]
